fixed list spacing on narrow screens

--- a/src/stylesheets/home.scss
+++ b/src/stylesheets/home.scss
@@ -13,6 +13,11 @@
 	margin-top: 2em;
 	border-radius: 1em;
 	background-color: $cont-backgr;
+
+	@media (max-width: 290px) {
+		padding: 2em 0.75em;
+	}
+
 	h2 {
 		margin: 0;
 		color: $cont-title;
@@ -21,6 +26,11 @@
 		list-style-type: none;
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+
+		@media (max-width: 420px) {
+			grid-template-columns: 1fr;
+		}
+
 		grid-auto-rows: auto;
 		gap: 1.5em;
 		padding: 0;
